--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Simone Sechi",
+  "name": "Simone Sechi's Portfolio",
   "icons": [
     {
       "src": "icons/favicon.ico",
@@ -11,11 +11,6 @@
       "src": "misc/logo.png",
       "type": "image/png",
       "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
     }
   ],
   "start_url": ".",
